--- a/src/renderer/window1/css/mastheads.css
+++ b/src/renderer/window1/css/mastheads.css
@@ -1,13 +1,120 @@
-.mastheadMainAreaContainer {
+/*
+Generic settings
+*/
+.mastheadContainer {
     overflow:hidden;
-    text-align:center;
-    border-bottom:2px solid #1B2631;
-    padding-bottom:5px;
+    position:relative;
+    height:60px;
 }
-.mastheadAppNameContainer {
+.mastheadLeftContainer {
     font-size:28px;
+    color:#1B2631;
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translate(0%, -50%);
+}
+.mastheadCenterContainer {
+    font-size:18px;
     text-align:center;
-    margin-top:10px;
-    margin-bottom:5px;
+    display:inline-block;
+    margin-top:0px;
+    margin-bottom:0px;
+    color:#1B2631;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.mastheadRightContainer {
+    font-size:32px;
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translate(0%, -50%);
     color:purple;
+}
+.mastheadEmojiNavButton {
+    width:50px;
+    height:50px;
+    margin-top:-20px;
+    display:inline-block;
+    color:#3f3f3f;
+    margin-left:5px;
+    font-size:56px;
+    vertical-align:middle;
+    text-align:center;
+    text-decoration:none;
+}
+.mastheadEmojiNavButton:hover {
+    color:orange;
+}
+.mastheadNavButton {
+    width:40px;
+    height:40px;
+    text-align:center;
+    display:inline-block;
+    color:black;
+    border:1px solid black;
+    background-color:#EFEFEF;
+    border-radius:3px;
+    padding:5px;
+    margin-left:10px;
+    font-size:10px;
+    vertical-align:middle;
+    text-decoration:none;
+}
+.mastheadNavButton:hover {
+    color:white;
+    background-color:#1B2631;
+}
+
+.mastheadSubBanner {
+    border-top:2px solid #1B2631;
+    border-bottom:2px solid #1B2631;
+    text-align:center;
+    font-size:12px;
+    color:grey;
+}
+
+.mastheadAvatarContainer {
+    display:inline-block;
+    position:relative;
+    width:50px;
+    height:50px;
+}
+.mastheadAvatarBox {
+  	display:inline-block;
+  	background-color:white;
+  	border:1px solid black;
+  	border-radius:250px;
+  	width:95%;
+  	height:95%;
+  	margin: 0;
+  	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+  /*
+  modifications
+  */
+.mastheadSubBannerNostr {
+  border-top:2px solid purple;
+  border-bottom:2px solid purple;
+}
+.mastheadSubBannerConceptGraph {
+  border-top:2px solid #929F80;
+  border-bottom:2px solid #929F80;
+}
+.mastheadSubBannerPrettyGood {
+  border-top:2px solid #616A6B;
+  border-bottom:2px solid #616A6B;
+}
+.mastheadSubBannerGrapevine {
+  border-top:2px solid purple;
+  border-bottom:2px solid purple;
+}
+.mastheadNavButtonActive {
+  background-color:green;
 }
