starting rating system for relay management

--- a/src/renderer/window1/css/nostr/settings.css
+++ b/src/renderer/window1/css/nostr/settings.css
@@ -24,7 +24,9 @@ div.relays:before {
 .relayUrlContainer {
     display:inline-block;
     margin-left:5px;
-    width:400px;
+    width:250px;
+    font-size:14px;
+    overflow:scroll;
 }
 .endorseMyRelaysContainer {
   padding:10px;
