redux store hello world pages

--- a/src/renderer/window1/css/prettyGood/index.css
+++ b/src/renderer/window1/css/prettyGood/index.css
@@ -56,3 +56,9 @@
 .doSomethingButton_tiny:hover {
   background-color:yellow;
 }
+.reduxStoreOverviewContainer {
+  margin-bottom:20px;
+  width:80%;
+  padding:10px;
+  border:1px solid black;
+}
