working on grapevine rating submission

--- a/src/renderer/window1/css/nostr/userProfile.css
+++ b/src/renderer/window1/css/nostr/userProfile.css
@@ -25,6 +25,7 @@
     display:inline-block;
     margin-left:10px;
     position:relative;
+    width:70%;
 }
 .mainUserProfileLeftColumnContainer {
     display:inline-block;
