--- a/src/renderer/window1/css/nostr/myProfile.css
+++ b/src/renderer/window1/css/nostr/myProfile.css
@@ -16,7 +16,7 @@
 .myProfileNameContainer {
   font-size:18px;
   width:100%;
-  height:50px;
+  margin-bottom:5px;
 }
 .myProfileAboutContainer {
   width:100%;
