--- a/src/renderer/window1/css/nostr/grapevine.css
+++ b/src/renderer/window1/css/nostr/grapevine.css
@@ -14,6 +14,7 @@
     margin-left:10px;
     background-color:#DFDFDF;
     color:black;
+    width:100px;
 }
 .leaveRatingButton:hover {
     background-color:yellow;
@@ -40,6 +41,7 @@
 }
 
 /* Tooltip text */
+
 .grapevineContainerLeftCol .tooltiptext {
     display: none;
     color: #fff;
@@ -56,9 +58,11 @@
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
+
 .grapevineContainerLeftCol:hover .tooltiptext {
     display: inline-block;
 }
+
 .grapevineItemContainer {
     margin-bottom:5px;
     position:relative;
