--- a/src/renderer/window1/css/nostr/grapevineToggleSwitchSmall.css
+++ b/src/renderer/window1/css/nostr/grapevineToggleSwitchSmall.css
@@ -42,7 +42,6 @@
   background-color: #060;
   color: #fff;
 }
-
 .inner-small:after {
   content: "OFF";
   padding-right: 5px;
@@ -69,4 +68,73 @@
 }
 .checkbox:checked + .label-small .switch-small {
   right: 0px;
+}
+
+
+/*
+source toggle switch (nostr live vs sql)
+*/
+.toggle-switch-source-small {
+  position: relative;
+  width: 80px;
+  display: inline-block;
+  text-align: left;
+  top: 0px;
+}
+.label-source-small {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 0 solid #bbb;
+  border-radius: 20px;
+}
+.switch-source-small {
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin: 4px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 55px;
+  border: 0 solid #bbb;
+  border-radius: 20px;
+  transition: all 0.3s ease-in 0s;
+}
+.checkbox:checked + .label-source-small .inner-source-small {
+  margin-left: 0;
+}
+.checkbox:checked + .label-source-small .switch-source-small {
+  right: 0px;
+}
+.inner-source-small {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.inner-source-small:before,
+.inner-source-small:after {
+  float: left;
+  width: 50%;
+  height: 24px;
+  padding: 0;
+  line-height: 24px;
+  color: #fff;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.inner-source-small:before {
+  content: "SQL";
+  padding-left: 10px;
+  background-color: #060;
+  color: #fff;
+}
+.inner-source-small:after {
+  content: "nostr";
+  padding-right: 10px;
+  background-color: #bbb;
+  color: #fff;
+  text-align: right;
 }
