--- a/src/renderer/window1/css/nostr/grapevineSettings.css
+++ b/src/renderer/window1/css/nostr/grapevineSettings.css
@@ -1,6 +1,7 @@
 .grapevineSettingsItemContainer {
-    margin-left:20px;
-    margin-bottom:20px;
+    margin:0px 20px 20px 20px;
+    padding: 10px;
+    border: 1px dashed grey;
 }
 .grapevineSettingsItemLeftCol {
     display:inline-block;
