--- a/src/renderer/window1/css/nostr/feed.css
+++ b/src/renderer/window1/css/nostr/feed.css
@@ -63,7 +63,6 @@
     height:20px;
     padding:2px;
     font-size:12px;
-    padding:2px;
 }
 .eventNameContainer {
     display:inline-block;
@@ -77,6 +76,12 @@
     display:inline-block;
     color:grey;
     float:right;
+}
+.eventReplyingToContainer {
+  height:20px;
+  padding:2px;
+  font-size:12px;
+  margin-left:3px;
 }
 .eventContentContainer {
     padding:5px;
@@ -124,9 +129,17 @@
     padding:2px 10px 2px 10px;
     border-radius:5px;
     display:inline-block;
+    color: grey;
 }
 .singleActionButtonContainer:hover {
     background-color:grey;
+    color: white;
+}
+.replyNumberContainer {
+  color: grey;
+}
+.singleActionButtonContainer:hover .replyNumberContainer {
+  color: white;
 }
 .rootEventContainer {
     border-top:20px;
