--- a/src/renderer/window1/css/nostr/newPost.css
+++ b/src/renderer/window1/css/nostr/newPost.css
@@ -1,4 +1,8 @@
 .newPostTextarea {
-    width:calc(100% - 20px);
-    height:200px
+    box-sizing: border-box;
+    width: 100%;
+    height:200px;
+    border: 2px solid purple;
+    border-radius: 5px;
+    padding: 10px;
 }
