show lists, items, ratings, endorsements; readme

--- a/src/renderer/window1/css/curatedLists/index.css
+++ b/src/renderer/window1/css/curatedLists/index.css
@@ -46,3 +46,14 @@
   background-color: blue;
   color: white;
 }
+.curatedListMainPageLink {
+  color: blue;
+  font-size: 12px;
+  width: 70px;
+  border-radius: 3px;
+  padding: 3px;
+}
+.curatedListMainPageLink:hover {
+  color: white;
+  background-color: black;
+}
