--- a/src/renderer/window1/css/navbars.css
+++ b/src/renderer/window1/css/navbars.css
@@ -106,6 +106,9 @@ MAIN PANEL
 .leftNav2PanelAskNostr {
   background-color: #a1dea1;
 }
+.leftNav2PanelEBooks {
+  background-color: red;
+}
 
 /******************************
 BUTTONS
