fleshing out Curated List event submissions

--- a/src/renderer/window1/css/mastheads.css
+++ b/src/renderer/window1/css/mastheads.css
@@ -145,3 +145,10 @@ Generic settings
 .backButtonContainer:hover {
   background-color:#CFCFCF;
 }
+.curatedListsListenerStatusContainer {
+  position: absolute;
+  top: 10px;
+  left: 250px;
+  color: grey;
+  font-size: 12px;
+}
