organizing pages behind dev modes

--- a/src/renderer/window1/css/navbars.css
+++ b/src/renderer/window1/css/navbars.css
@@ -107,7 +107,7 @@ MAIN PANEL
   background-color: #a1dea1;
 }
 .leftNav2PanelEBooks {
-  background-color: red;
+  background-color: #929f8083;
 }
 
 /******************************
