--- a/src/renderer/window1/css/nostr/index.css
+++ b/src/renderer/window1/css/nostr/index.css
@@ -13,3 +13,11 @@
 .xButton:hover {
   cursor:pointer;
 }
+.newWordOverNostrTextarea {
+  box-sizing: border-box;
+  width: 100%;
+  height:400px;
+  border: 2px solid purple;
+  border-radius: 5px;
+  padding: 10px;
+}
