update to viewing someone's follow list

--- a/src/renderer/window1/css/prettyGood/index.css
+++ b/src/renderer/window1/css/prettyGood/index.css
@@ -34,6 +34,10 @@
   background-color:#DFDFDF;
   color:black;
 }
+.doSomethingButtonActive {
+  background-color:green;
+  color:white;
+}
 .doSomethingButton:hover {
   background-color:yellow;
 }
