--- a/src/renderer/window1/css/nostr/feed.css
+++ b/src/renderer/window1/css/nostr/feed.css
@@ -75,7 +75,6 @@
 .eventTimeContainer {
     display:inline-block;
     color:grey;
-    float:right;
 }
 .eventReplyingToContainer {
   height:20px;
@@ -174,4 +173,9 @@
 }
 .threadNoteNotFocus {
 
+}
+.actionButtonAlreadyActivated {
+  background-color: #CFCFCF;
+  border-radius: 5px;
+  padding: 3px;
 }
