misc fixes to action buttons

--- a/src/renderer/window1/css/nostr/feed.css
+++ b/src/renderer/window1/css/nostr/feed.css
@@ -176,6 +176,7 @@
 }
 .actionButtonAlreadyActivated {
   background-color: #CFCFCF;
+  border: 1px solid blue;
   border-radius: 5px;
   padding: 3px;
 }
