--- a/src/renderer/window1/css/nostr/index.css
+++ b/src/renderer/window1/css/nostr/index.css
@@ -21,3 +21,9 @@
   border-radius: 5px;
   padding: 10px;
 }
+.pickSatsAmountButton:hover {
+  background-color: yellow;
+}
+.pickSatsAmountButtonActive {
+  background-color: green;
+}
