--- a/src/renderer/window1/css/nostr/userList.css
+++ b/src/renderer/window1/css/nostr/userList.css
@@ -6,11 +6,17 @@
     position:relative;
     background-color:#c6c6ff;
 }
-.userListSmallAvatarContainer {
+.agTableSmallAvatarContainer {
     display:inline-block;
     position:relative;
-    width:50px;
-    height:50px;
+    width:30px;
+    height:30px;
+}
+.userListSmallAvatarContainer {
+  display:inline-block;
+  position:relative;
+  width:50px;
+  height:50px;
 }
 .userListSmallAvatarBox {
   	display:inline-block;
