cleaning up NIP51 app

--- a/src/renderer/window1/css/navbars.css
+++ b/src/renderer/window1/css/navbars.css
@@ -113,7 +113,7 @@ MAIN PANEL
   background-color: #929f8083;
 }
 .leftNav2PanelNip51 {
-  background-color: #B8BFF1;
+  background-color: #c6c7c7;
 }
 
 /******************************
